--- a/src/main/webapp/app/entities/exemplaire/exemplaire-detail.html
+++ b/src/main/webapp/app/entities/exemplaire/exemplaire-detail.html
@@ -28,4 +28,10 @@
         <span class="glyphicon glyphicon-pencil"></span>
         <span class="hidden-xs hidden-sm"> Edit</span>
     </button>
+    <button type="submit"
+            ui-sref="emprunt.newParam({id_exemplaire:vm.exemplaire.id})"
+            class="btn btn-primary btn-sm">
+        <span class="glyphicon glyphicon-send"></span>
+        <span class="hidden-xs hidden-sm"> Emprunte </span>
+    </button>
 </div>
