--- a/src/main/webapp/app/account/reset/request/reset.request.html
+++ b/src/main/webapp/app/account/reset/request/reset.request.html
@@ -1,18 +1,18 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1>Reset your password</h1>
+            <h1>Initialiser votre mot de passe</h1>
 
             <div class="alert alert-danger" ng-show="vm.errorEmailNotExists">
-                <strong>E-Mail address isn't registered!</strong> Please check and try again.
+                <strong>Votre adresse e-mail n'est pas connu!</strong> Veuillez ressayer.
             </div>
 
             <div class="alert alert-warning" ng-hide="vm.success">
-                <p>Enter the e-mail address you used to register.</p>
+                <p>Utilisz votre adresse e-mail que vous avez utilisé au moment du créqtion de votre compte.</p>
             </div>
 
             <div class="alert alert-success" ng-show="vm.success == 'OK'">
-                <p>Check your e-mails for details on how to reset your password.</p>
+                <p>Veuillez vérifier votre boite mail.</p>
             </div>
 
             <form ng-show="!vm.success" name="form" role="form" novalidate ng-submit="vm.requestReset()" show-validation>
@@ -23,23 +23,23 @@
                     <div ng-show="form.email.$dirty && form.email.$invalid">
                         <p class="help-block"
                            ng-show="form.email.$error.required">
-                            Your e-mail is required.
+                            E-mail est obligatoire.
                         </p>
                         <p class="help-block"
                            ng-show="form.email.$error.email">
-                            Your e-mail is invalid.
+                            E-mail est invalide.
                         </p>
                         <p class="help-block"
                            ng-show="form.email.$error.minlength">
-                            Your e-mail is required to be at least 5 characters.
+                            E-mail doit faire au moins 5 charactères
                         </p>
                         <p class="help-block"
                            ng-show="form.email.$error.maxlength">
-                            Your e-mail cannot be longer than 100 characters.
+                            E-mail ne doit pas faire plus que 100 charactéres.
                         </p>
                     </div>
                 </div>
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Reset</button>
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Initialiser</button>
             </form>
 
         </div>
