--- a/src/main/webapp/app/entities/livre/livres.html
+++ b/src/main/webapp/app/entities/livre/livres.html
@@ -1,77 +1,68 @@
-<link rel="stylesheet" href="content/css/hover-min.css">
-
 <div>
     <h2>Livres</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="livre.new">
+                <button class="btn btn-primary" ui-sref="livre.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span>
-                            Ajouter un livre
-                        </span>
+                    <span >
+                        Create new Livre
+                    </span>
                 </button>
             </div>
         </div>
     </div>
     <br/>
-
-
-   <!-- <div class="row" style="overflow:hidden;">
-        <div class="col-sm-6 col-md-4" style="overflow:hidden; width:100%; text-align: center">
-            <div class="thumbnail hvr-pulse-grow" ng-repeat="todo in filteredTodos track by livre.id"
-                 style="float:left; height:250px ;display: inline-block; margin:4%; width:25%" ;
-                 ui-sref="oeuvre-detail({id:livre.id})">
-                <img src={{livre.url}}>
-                <div class="caption">
-                    <p>Titre: {{livre.titre}} </p>
-                    <p>Auteurs:</p>
-                    <p ng-repeat="auteur in livre.auteurs track by auteur.id">{{auteur.nom}}</p>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <ul>
-        <li ng-repeat="todo in filteredTodos">{{todo.text}}</li>
-    </ul>
-    <div class="pagination" data-pagination="" data-num-pages="numPages()"
-         data-current-page="currentPage" data-max-size="maxSize"
-         data-boundary-links="true"></div>
-
-
-                <!--        <td><a ui-sref="livre-detail({id:livre.id})">{{livre.id}}</a></td>
-                            <td>{{livre.dateEdition | date:'mediumDate'}}</td>
-                        <td>{{livre.resume}}</td>
-                        {{livre.url}}</td>
-
-                            <a ui-sref="oeuvre-detail({id:livre.oeuvreId})">{{livre.oeuvreId}}</a>
-
-
-
-                            <div class="btn-group flex-btn-group-container">
-                                <button type="submit"
-                                        ui-sref="livre-detail({id:livre.id})"
-                                        class="btn btn-info btn-sm">
-                                    <span class="glyphicon glyphicon-eye-open"></span>
-                                    <span class="hidden-xs hidden-sm"></span>
-                                </button>
-                                <button type="submit"
-                                        ui-sref="livre.edit({id:livre.id})"
-                                        class="btn btn-primary btn-sm">
-                                    <span class="glyphicon glyphicon-pencil"></span>
-                                    <span class="hidden-xs hidden-sm"></span>
-                                </button>
-                                <button type="submit"
-                                        ui-sref="livre.delete({id:livre.id})"
-                                        class="btn btn-danger btn-sm">
-                                    <span class="glyphicon glyphicon-remove-circle"></span>
-                                    <span class="hidden-xs hidden-sm"></span>
-                                </button>
-                            </div>
-
-    -->
-
-
+    <div class="table-responsive">
+        <table class="jh-table table table-striped">
+            <thead>
+                <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
+                    <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="dateEdition"><span>Date Edition</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="resume"><span>Resume</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="url"><span>Url</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="oeuvreId"><span>Oeuvre</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="livre in vm.livres track by livre.id">
+                    <td><a ui-sref="livre-detail({id:livre.id})">{{livre.id}}</a></td>
+                        <td>{{livre.dateEdition | date:'mediumDate'}}</td>
+                    <td>{{livre.resume}}</td>
+                    <td>{{livre.url}}</td>
+                    <td>
+                        <a ui-sref="oeuvre-detail({id:livre.oeuvreId})">{{livre.oeuvreId}}</a>
+                    </td>
+                    <td class="text-right">
+                        <div class="btn-group flex-btn-group-container">
+                            <button type="submit"
+                                    ui-sref="livre-detail({id:livre.id})"
+                                    class="btn btn-info btn-sm">
+                                <span class="glyphicon glyphicon-eye-open"></span>
+                                <span class="hidden-xs hidden-sm"></span>
+                            </button>
+                            <button type="submit"
+                                    ui-sref="livre.edit({id:livre.id})"
+                                    class="btn btn-primary btn-sm">
+                                <span class="glyphicon glyphicon-pencil"></span>
+                                <span class="hidden-xs hidden-sm"></span>
+                            </button>
+                            <button type="submit"
+                                    ui-sref="livre.delete({id:livre.id})"
+                                    class="btn btn-danger btn-sm">
+                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                <span class="hidden-xs hidden-sm"></span>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="text-center">
+        <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
+        <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
+    </div>
 </div>
-
