magazines ajoutés connexion au bdd rasp

--- a/src/main/webapp/app/entities/emprunt/emprunts.html
+++ b/src/main/webapp/app/entities/emprunt/emprunts.html
@@ -46,16 +46,10 @@
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
-                                    ui-sref="emprunt.edit({id:emprunt.id})"
+                                    ui-sref="emprunt.delete({id:emprunt.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="emprunt.delete({id:emprunt.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
-                                <span class="hidden-xs hidden-sm"></span>
+                                <span class="hidden-xs hidden-sm">Rendre</span>
                             </button>
                         </div>
                     </td>
