gestions des affichages

--- a/src/main/webapp/app/account/password/password.html
+++ b/src/main/webapp/app/account/password/password.html
@@ -1,10 +1,10 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2>Password for [<b>{{vm.account.login}}</b>]</h2>
+            <h2>Mot de passe pour <b>{{vm.account.login}}</b></h2>
 
             <div class="alert alert-success" ng-show="vm.success">
-                <strong>Password changed!</strong>
+                <strong>Mot de passe a changé!</strong>
             </div>
             <div class="alert alert-danger" ng-show="vm.error" >
                 <strong>An error has occurred!</strong> The password could not be changed.
@@ -17,7 +17,7 @@
             <form name="form" role="form" novalidate ng-submit="vm.changePassword()" show-validation>
 
                 <div class="form-group">
-                    <label class="control-label" for="password">New password</label>
+                    <label class="control-label" for="password">Nouveau mot de passe</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="New password"
                            ng-model="vm.password" ng-minlength=4 ng-maxlength=50 required>
                     <div ng-show="form.password.$dirty && form.password.$invalid">
@@ -37,7 +37,7 @@
                     <password-strength-bar password-to-check="vm.password"></password-strength-bar>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="confirmPassword">New password confirmation</label>
+                    <label class="control-label" for="confirmPassword">Confirmer le mot de passe</label>
                     <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm the new password"
                            ng-model="vm.confirmPassword" ng-minlength=4 ng-maxlength=50 required>
                     <div ng-show="form.confirmPassword.$dirty && form.confirmPassword.$invalid">
