--- a/src/main/webapp/app/entities/auteur/auteur-detail.html
+++ b/src/main/webapp/app/entities/auteur/auteur-detail.html
@@ -28,6 +28,6 @@
 
     <button type="button" ui-sref="auteur-detail.edit({id:vm.auteur.id})" class="btn btn-primary">
         <span class="glyphicon glyphicon-pencil"></span>
-        <span class="hidden-xs hidden-sm"> Edit</span>
+        <span class="hidden-xs hidden-sm"> Modifier</span>
     </button>
 </div>
