--- a/src/main/webapp/app/entities/emprunt/emprunt-detail.html
+++ b/src/main/webapp/app/entities/emprunt/emprunt-detail.html
@@ -28,6 +28,6 @@
     <button type="submit"
             ui-sref="{{ vm.previousState }}"
             class="btn btn-info">
-        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
+        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Précédent</span>
     </button>
 </div>
