--- a/src/main/webapp/app/entities/emprunt/emprunts.html
+++ b/src/main/webapp/app/entities/emprunt/emprunts.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="emprunt.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Emprunt
+                        Créer un Emprunt
                     </span>
                 </button>
             </div>
@@ -40,13 +40,7 @@
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
-                                    ui-sref="emprunt-detail({id:emprunt.id})"
-                                    class="btn btn-info btn-sm">
-                                <span class="glyphicon glyphicon-eye-open"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="emprunt.delete({id:emprunt.id})"
+                                    ui-sref="exemplaire-detail.edit({id:emprunt.exemplaireId})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm">Rendre</span>
