--- a/src/main/webapp/app/entities/exemplaire/exemplaires.html
+++ b/src/main/webapp/app/entities/exemplaire/exemplaires.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="exemplaire.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Exemplaire
+                        Créer un exemplaire
                     </span>
                 </button>
             </div>
