--- a/src/main/webapp/app/entities/magazine/magazines.html
+++ b/src/main/webapp/app/entities/magazine/magazines.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="magazine.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Magazine
+                        Créer un magazine
                     </span>
                 </button>
             </div>
@@ -32,7 +32,7 @@
                     <td>{{magazine.numero}}</td>
                         <td>{{magazine.parution | date:'yyyy'}}</td>
                     <td>{{magazine.periodicite}}</td>
-                    <td>{{magazine.oeuvreId}}</td>
+                    <td>{{magazine.oeuvreTitre}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
