--- a/src/main/webapp/app/entities/oeuvre/oeuvres.html
+++ b/src/main/webapp/app/entities/oeuvre/oeuvres.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="oeuvre.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Oeuvre
+                        Créer un oeuvre
                     </span>
                 </button>
             </div>
