--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -6,7 +6,7 @@
 
             <div ng-switch="vm.isAuthenticated()">
                 <div class="alert alert-success" ng-switch-when="true">
-                    You are logged in as user "{{vm.account.login}}".
+                    Vous êtes connecté en tant que "{{vm.account.login}}".
                 </div>
 
                 <p class="alert alert-warning" ng-switch-when="false">
