--- a/src/main/webapp/app/entities/auteur/auteurs.html
+++ b/src/main/webapp/app/entities/auteur/auteurs.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="auteur.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Auteur
+                        Créer un Auteur
                     </span>
                 </button>
             </div>
