--- a/src/main/webapp/app/entities/exemplaire/exemplaire-detail.html
+++ b/src/main/webapp/app/entities/exemplaire/exemplaire-detail.html
@@ -21,7 +21,7 @@
     <button type="submit"
             ui-sref="{{ vm.previousState }}"
             class="btn btn-info">
-        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
+        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Précédent</span>
     </button>
 
     <button type="submit" ng-show="{{vm.exemplaire.disponible}}"
