--- a/src/main/webapp/app/entities/magazine/magazine-detail.html
+++ b/src/main/webapp/app/entities/magazine/magazine-detail.html
@@ -25,11 +25,11 @@
     <button type="submit"
             ui-sref="{{ vm.previousState }}"
             class="btn btn-info">
-        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
+        <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Précédent</span>
     </button>
 
     <button type="button" ui-sref="magazine-detail.edit({id:vm.magazine.id})" class="btn btn-primary">
         <span class="glyphicon glyphicon-pencil"></span>
-        <span class="hidden-xs hidden-sm"> Edit</span>
+        <span class="hidden-xs hidden-sm"> Modifier</span>
     </button>
 </div>
