--- a/src/main/webapp/app/entities/usager/usagers.html
+++ b/src/main/webapp/app/entities/usager/usagers.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="usager.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Usager
+                        Créer un Usager
                     </span>
                 </button>
             </div>
@@ -37,24 +37,6 @@
                     <td>{{usager.telephone}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
-                            <button type="submit"
-                                    ui-sref="usager-detail({id:usager.id})"
-                                    class="btn btn-info btn-sm">
-                                <span class="glyphicon glyphicon-eye-open"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="usager.edit({id:usager.id})"
-                                    class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="usager.delete({id:usager.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
                         </div>
                     </td>
                 </tr>
